se cambia flujo de trabajo

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: IC
+name: INTEGRACION-CONTINUA-PY
 
 on:
   push:
@@ -7,7 +7,6 @@ on:
   pull_request:
     branches: 
        main
-
 
 jobs:
   build:
