--- a/src/.env
+++ b/src/.env
@@ -1,7 +1,19 @@
-MYSQL_USER = root
-MYSQL_PASSWORD = ''
-MYSQL_HOST = localhost
-MYSQL_DATABASE = flaskmysql
+MYSQL_USER=myuser
+MYSQL_PASSWORD=mypassword
+MYSQL_HOST=localhost
+MYSQL_DATABASE=flaskmysql
+MYSQL_PORT=3306
+
+# MYSQL_USER=root
+# MYSQL_PASSWORD=mi_contraseña
+# MYSQL_HOST=localhost
+# MYSQL_DATABASE=flaskmysql
+# MYSQL_PORT=3306  # O el puerto que esté configurado en tu MySQL
+
+# MYSQL_USER = root
+# MYSQL_PASSWORD = ''
+# MYSQL_HOST = localhost
+# MYSQL_DATABASE = flaskmysql
 #MYSQL_PORT =
 
 #MYSQL_USER = b65d97e4bfc22b
