--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,10 +17,10 @@ services:
     image: mysql:latest
     container_name: mysql_db
     environment:
-      MYSQL_ROOT_PASSWORD: root_password  
-      MYSQL_DATABASE: flaskmysql           
-      MYSQL_USER: myuser                   
-      MYSQL_PASSWORD: mypassword           
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}  
+      MYSQL_DATABASE: ${MYSQL_DATABASE}           
+      MYSQL_USER: ${MYSQL_USER}                   
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}           
     ports:
       - "3306:3306"
     volumes:
